--- a/notebooks/data_pipeline.ipynb
+++ b/notebooks/data_pipeline.ipynb
@@ -8,7 +8,7 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3.9.6 64-bit ('pdal': conda)"
+      "display_name": "Python 3.9.6 64-bit ('pdal_env': conda)"
     },
     "language_info": {
       "name": "python",
@@ -23,7 +23,7 @@
       "file_extension": ".py"
     },
     "interpreter": {
-      "hash": "c7204934ba84b26f775e56ec588025210f8f48a5e47c2406a684068e77ee7745"
+      "hash": "3a9ddf25b68034d685e0c5d6dccf9a06cbbe294eb015eaaaaa3ba9f5130cd160"
     }
   },
   "cells": [
@@ -44,6 +44,8 @@
         "import pdal\n",
         "import json\n",
         "from scripts.data_fetcher import FetchData\n",
+        "import geopandas as gpd\n",
+        "from shapely.geometry import Polygon\n",
         "import pprint\n",
         "pp = pprint.PrettyPrinter(indent=14)\n"
       ],
@@ -67,9 +69,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "source": [
-        "with open(\"data/ept.json\",'r') as ept_file:\n",
+        "with open(\"../data/ept.json\",'r') as ept_file:\n",
         "    ept_json = json.load(ept_file)\n",
         "\n",
         "pp.pprint(ept_json)\n"
@@ -79,29 +81,29 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{             'bounds': [-11752672, 4740364, -68269, -11610700, 4882336, 73703],\n",
-            "              'boundsConforming': [             -11752670,\n",
-            "                                                4750545,\n",
-            "                                                1136,\n",
-            "                                                -11610701,\n",
-            "                                                4872154,\n",
-            "                                                4297],\n",
+            "{             'bounds': [-16816671, 11131304, -6851, -16801711, 11146264, 8109],\n",
+            "              'boundsConforming': [             -16813353,\n",
+            "                                                11131305,\n",
+            "                                                -28,\n",
+            "                                                -16805029,\n",
+            "                                                11146262,\n",
+            "                                                1286],\n",
             "              'dataType': 'laszip',\n",
             "              'hierarchyType': 'json',\n",
-            "              'points': 33711288742,\n",
+            "              'points': 298602840,\n",
             "              'schema': [             {             'name': 'X',\n",
-            "                                                    'offset': -11681686,\n",
-            "                                                    'scale': 0.001,\n",
+            "                                                    'offset': -16809191,\n",
+            "                                                    'scale': 0.01,\n",
             "                                                    'size': 4,\n",
             "                                                    'type': 'signed'},\n",
             "                                      {             'name': 'Y',\n",
-            "                                                    'offset': 4811350,\n",
-            "                                                    'scale': 0.001,\n",
+            "                                                    'offset': 11138784,\n",
+            "                                                    'scale': 0.01,\n",
             "                                                    'size': 4,\n",
             "                                                    'type': 'signed'},\n",
             "                                      {             'name': 'Z',\n",
-            "                                                    'offset': 2716,\n",
-            "                                                    'scale': 0.001,\n",
+            "                                                    'offset': 629,\n",
+            "                                                    'scale': 0.01,\n",
             "                                                    'size': 4,\n",
             "                                                    'type': 'signed'},\n",
             "                                      {             'name': 'Intensity',\n",
@@ -134,10 +136,13 @@
             "                                      {             'name': 'GpsTime',\n",
             "                                                    'size': 8,\n",
             "                                                    'type': 'float'},\n",
-            "                                      {             'name': 'OriginId',\n",
-            "                                                    'size': 4,\n",
+            "                                      {             'name': 'ScanChannel',\n",
+            "                                                    'size': 1,\n",
+            "                                                    'type': 'unsigned'},\n",
+            "                                      {             'name': 'ClassFlags',\n",
+            "                                                    'size': 1,\n",
             "                                                    'type': 'unsigned'}],\n",
-            "              'span': 256,\n",
+            "              'span': 128,\n",
             "              'srs': {             'authority': 'EPSG',\n",
             "                                   'horizontal': '3857',\n",
             "                                   'wkt': 'PROJCS[\"WGS 84 / '\n",
@@ -163,12 +168,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "source": [
         "import numpy as np\n",
         "import pylas\n",
         "\n",
-        "with pylas.open('data/6-50-20-32.laz') as fh:\n",
+        "with pylas.open('../data/6-50-20-32.laz') as fh:\n",
         "    print('Points from Header:', fh.header.point_count)\n",
         "    las = fh.read()\n",
         "    print(las)\n",
@@ -200,41 +205,114 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Define the Pipeline"
+        "## Prepare the input"
       ],
       "metadata": {}
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "source": [
-        "pipeline_def = [\n",
-        "    {\n",
-        "        \"type\": \"readers.ept\",\n",
-        "        \"bounds\": \"\",\n",
-        "        \"filename\": \"\",\n",
-        "        \"tag\":\"read_data\"\n",
-        "    },\n",
-        "    {\n",
-        "        \"type\":\"writers.text\",\n",
-        "        \"format\":\"geojson\",\n",
-        "        \"order\":\"X,Y,Z\",\n",
-        "        \"keep_unspecified\":\"false\",\n",
-        "        \"filename\":\"outputfile.txt\"\n",
-        "    }\n",
-        "]"
+        "def prepare_input(polygon_boundaries):\n",
+        "    MINX, MINY, MAXX, MAXY = polygon_boundaries\n",
+        "    polygon = Polygon(((MINX, MINY), (MINX, MAXY), (MAXX, MAXY), (MAXX, MINY), (MINX, MINY)))\n",
+        "\n",
+        "    grid = gpd.GeoDataFrame([polygon], columns=[\"geometry\"])\n",
+        "    grid.set_crs(epsg=4326, inplace=True)\n",
+        "    return str(grid.loc[0,\"geometry\"])\n",
+        "\n",
+        "polygon_bound = prepare_input([-93.756155, 41.918015, -93.747334, 41.921429])"
       ],
       "outputs": [],
       "metadata": {}
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
+      "source": [
+        "polygon_bound"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'POLYGON ((-93.75615500000001 41.918015, -93.75615500000001 41.921429, -93.747334 41.921429, -93.747334 41.918015, -93.75615500000001 41.918015))'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "source": [
+        "import pdal\n",
+        "from json import load, dumps\n",
+        "import sys\n",
+        "import geopandas as gpd\n",
+        "from shapely.geometry import Point\n",
+        "\n",
+        "class FetchData:\n",
+        "   # fetches data given public data path, region and polygon\n",
+        "    def __init__(self,public_data_path,region,polygon_bound):\n",
+        "       # initialize variables\n",
+        "       self.public_data_path = public_data_path\n",
+        "       self.region = region\n",
+        "       self.public_access_path = self.public_data_path + self.region + \"ept.json\"\n",
+        "       self.polygon = polygon_bound\n",
+        "       # set and execute pipeline\n",
+        "       self.fetch_data()\n",
+        "\n",
+        "    def fetch_data(self):\n",
+        "       self.set_pipeline_df()\n",
+        "       self.execute_pipeline()\n",
+        "       self.get_elevation()\n",
+        " \n",
+        "    def set_pipeline_df(self):\n",
+        "       self.data_pipeline_json = json.load(open(\"../data/pipeline.json\"))\n",
+        "       self.data_pipeline_json[\"pipeline\"][0]['filename'] = self.public_access_path\n",
+        "       self.data_pipeline_json[\"pipeline\"][1]['polygon'] = self.polygon\n",
+        "       self.pipeline = pdal.Pipeline(json.dumps(self.data_pipeline_json))\n",
+        "       print(self.pipeline)\n",
+        "       # self.pipeline = pdal.Pipeline(pipeline_json)\n",
+        "   \n",
+        "    def get_elevation(self):\n",
+        "        geodf = gpd.GeoDataFrame()\n",
+        "        elevations = []\n",
+        "        geometry = []\n",
+        "        for row in self.self.pipeline.arrays()[0]:\n",
+        "            value_list = row.tolist()[-3:]\n",
+        "            geometry.append(Point(value_list[0], value_list[1]))\n",
+        "            elevations.append(value_list[2])\n",
+        "        geodf['elevation'] = elevations\n",
+        "        geodf['geometry'] = geometry\n",
+        "        self.geodf = geodf.set_crs(epsg=4326)\n",
+        "\n",
+        "\n",
+        "    def execute_pipeline(self):\n",
+        "       self.count = self.pipeline.execute()\n",
+        "\n",
+        "    def return_pipeline(self):\n",
+        "       return self.pipeline\n",
+        "\n",
+        "    def return_elevation(self):\n",
+        "       return self.geodf\n",
+        "    \n",
+        "\n"
+      ],
+      "outputs": [],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
       "source": [
         "fd = FetchData(public_data_path = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/\",\n",
-        "region = 'USGS_LPC_CO_SoPlatteRiver_Lot5_2013_LAS_2015/',pipeline_def= pipeline_def,\n",
-        "bounds = \"([-11669524.7,-11666600],[4776607.3,4778714])\"\n",
-        ")\n",
+        "region = \"IA_FullState/\",polygon_bound = polygon_bound)\n",
         "\n"
       ],
       "outputs": [],
